--- a/app/views/feedbacks/_filter.html.erb
+++ b/app/views/feedbacks/_filter.html.erb
@@ -19,12 +19,18 @@
   <div class="field">
     <%= form.label :participation_rating %>
     <!-- <%= form.select :participation_rating, Feedback::CHOICES, :include_blank => true %> -->
-    <!-- <%= form.select :participation_rating_to, Feedback::CHOICES, :include_blank => true %> -->
 
+    <!-- <%= form.collection_check_boxes :participation_rating, Feedback.choices, :first, :last, :include_hidden => false do |pr| %> -->
+      <!-- <div id="checkbox"><%= pr.check_box %><%= pr.label {pr.text} %></div> -->
+    <!-- <% end %> -->
 
-    <%= form.collection_check_boxes :participation_rating, Feedback.choices, :first, :last, :include_hidden => false do |pr| %>
-      <div id="checkbox"><%= pr.check_box %><%= pr.label {pr.text} %></div>
-    <% end %>
+    <!-- dropdown that allows multiple selections, but requires CTRL-click or SHIFT-click -->
+    <!-- <%= form.collection_select :participation_rating, Feedback.choices, :first, :last, {}, {:multiple => true, :size => Feedback::CHOICES.length} %> -->
+
+    <!-- <%= field_set_tag  do %> -->
+      <%= form.select :participation_rating_start, Feedback::CHOICES, :include_blank => true %>
+      <%= form.select :participation_rating_end, Feedback::CHOICES, :include_blank => true %>
+    <!-- <% end %> -->
   </div>
   
 
@@ -32,18 +38,24 @@
     <%= form.label :effort_rating %>
     <!-- <%= form.select :effort_rating, Feedback::CHOICES, :include_blank => true %> -->
 
-    <%= form.collection_check_boxes :effort_rating, Feedback.choices, :first, :last, :include_hidden => false do |pr| %>
-      <div id="checkbox"><%= pr.check_box %><%= pr.label {pr.text} %></div>
-    <% end %>
+    <!-- <%= form.collection_check_boxes :effort_rating, Feedback.choices, :first, :last, :include_hidden => false do |pr| %> -->
+      <!-- <div id="checkbox"><%= pr.check_box %><%= pr.label {pr.text} %></div> -->
+    <!-- <% end %> -->
+
+    <%= form.select :effort_rating_start, Feedback::CHOICES, :include_blank => true %>
+    <%= form.select :effort_rating_end, Feedback::CHOICES, :include_blank => true %>
   </div>
 
   <div class="field">
     <%= form.label :punctuality_rating %>
     <!-- <%= form.select :punctuality_rating, Feedback::CHOICES, :include_blank => true %> -->
 
-    <%= form.collection_check_boxes :punctuality_rating, Feedback.choices, :first, :last, :include_hidden => false do |pr| %>
-      <div id="checkbox"><%= pr.check_box %><%= pr.label {pr.text} %></div>
-    <% end %>
+    <!-- <%= form.collection_check_boxes :punctuality_rating, Feedback.choices, :first, :last, :include_hidden => false do |pr| %> -->
+      <!-- <div id="checkbox"><%= pr.check_box %><%= pr.label {pr.text} %></div> -->
+    <!-- <% end %> -->
+
+    <%= form.select :punctuality_rating_start, Feedback::CHOICES, :include_blank => true %>
+    <%= form.select :punctuality_rating_end, Feedback::CHOICES, :include_blank => true %>
   </div>
 
   <div class="field">
