--- a/app/views/static_pages/download_current.csv.erb
+++ b/app/views/static_pages/download_current.csv.erb
@@ -1,4 +1,4 @@
-<%- headers = ['Name:', 'Email:', 'Team id:', 'Start Date:', 'End Date:'] -%>
+<%- headers = ['Name:', 'Email:', 'Team:', 'Start Date:', 'End Date:'] -%>
 
 <%= CSV.generate_line(headers).strip -%>
 
