show filtered rating selection on page

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -16,8 +16,16 @@
       <% Feedback::FILTERABLE_PARAMS_STRINGS.each_with_index do |filter, index| %>
         <% param = params[Feedback::FILTERABLE_PARAMS[index].name].first %>
         <% if !param.blank? %>
-        
           <p><%= filter %>: <%= param %></p>
+        <% end %>
+      <% end %>
+
+      <% Feedback::RATING_FILTERABLE_PARAMS_STRINGS.each_with_index do |filter, index| %>
+        <% rating_start = params[(Feedback::RATING_FILTERABLE_PARAMS[index].name + "_start")].first %>
+        <% rating_end = params[(Feedback::RATING_FILTERABLE_PARAMS[index].name + "_end")].first %>
+
+        <% if !rating_start.empty? && !rating_end.empty? %>
+         <p><%= filter %>: <%= rating_start %>-<%= rating_end %></p>
         <% end %>
       <% end %>
 
