fix(Help Pages): moved priority and ratings information into partial since identical, then called this partial in both help pages

--- a/app/views/teams/help.html.erb
+++ b/app/views/teams/help.html.erb
@@ -11,14 +11,7 @@
 </div>
 <div class="help-div">
   <h2>Team's Individual Feedback</h2>
-  <p><b>Average Rating of Period</b> - Displays average rating, on a scale of 1 to 5, of submitted feedback in given period.</p>
-  <p><b>Weighted Priority</b> - This displays the overall urgency of Team's feedback. <br>
-                                Values will either be "No Feedback", "Urgent" or "Low". <br>
-                                If at least one of the team's feedback has a priority score of 0 (urgent), 
-                                then this will display "Urgent".
-                                If 1/3 of feedback has a priority score of 1 (medium), then this will display "Urgent"
-                                Otherwise this will display "Low".
-  </p>
+  <%= render 'static_pages/priority_ratings_help' %>
   <% if current_user.is_admin %>
     <p><b>Student's Name</b> - Name of student who submitted feedback.</p>
     <p><b>Rating</b> - The rating the student submitted with their feedback.</p>
