--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -74,9 +74,12 @@
             <li>Select a team name from the dropdown</li>
             <li>All team names are within the dropdown selection</li>
           </ul>
-        <li><b>Participation Rating</b> - Filters for selected participation rating</li>
-        <li><b>Effort Rating</b> - Filters for selected effort rating</li>
-        <li><b>Punctuality Rating</b> - Filters for selected punctuality rating</li>
+        <li><b>Participation Rating</b> - Filters for selected range of participation ratings</li>
+          <ul>
+            <li>For example, if 2 and 4 are selected in the 'start' and 'end' dropdowns respectively, any feedback with a participation rating of 2, 3 or 4 will be shown.</li>
+          </ul>
+        <li><b>Effort Rating</b> - Filters for selected range of effort ratings</li>
+        <li><b>Punctuality Rating</b> - Filters for selected range of punctuality ratings</li>
         <li><b>Priority</b> - Filters for selected priority</li>
         <li><b>Timestamp</b> - Filters for all timestamps within the selected time range</li>
           <ul>
