remove 'clear' in help

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -89,7 +89,7 @@
       </ul>
     </p>
     <p>
-      Click the filter button to apply the filters. Click the clear button to clear the selected filters.
+      Click the filter button to apply the filters.
     </p>
     <p>
       After filters are applied, they will show underneath. Click the reset button to clear the applied filters.
