--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -35,6 +35,12 @@
   <%= will_paginate @teams %>
 </div>
 
+<%= form_with(url: teams_path, method: :get, local: true) do |form| %>
+  <div class='form-group'>
+    <%= form.select :per_page, options_for_select([1, 5, 10, 20, 100], @teams.per_page), {}, { onchange: 'this.form.submit();' } %>
+  </div>
+<% end %>
+
 <br>
 <%# Use id to prevent capybara getting confused about which "new team" link to click %>
 <%= link_to 'New Team', new_team_path, id: "new-team-link" %> |
