There are not two differnt questions that are randomly chosen as security questions

--- a/app/views/users/_form_forgot_question.html.erb
+++ b/app/views/users/_form_forgot_question.html.erb
@@ -1,8 +1,13 @@
 <%= form_with(method: :post, local: true) do |form| %>
 
   <div class="field">
-    <%= form.label 'What is the name of the city you were from?' %>
-    <%= form.text_field :security_q_one %>
+    <%= form.label @q_1_text %>
+    <%= form.text_field @random_q_1 %>
+  </div>
+
+  <div class="field">
+    <%= form.label @q_2_text %>
+    <%= form.text_field @random_q_2 %>
   </div>
 
   <%= form.hidden_field :email, value: @user_email  %>
