refactor(Help): Adjusted the instrctions for 'Medium' case to be more clear

--- a/app/views/static_pages/_priority_ratings_help.html.erb
+++ b/app/views/static_pages/_priority_ratings_help.html.erb
@@ -16,7 +16,7 @@
 
   Scenarios that can result in <i>"Medium"</i> priority (yellow status):
   <ul>
-    <li>Less than half of the team does not submit feedback, but at least one member still has not submitted.</li>
+    <li>More than half of the team submits feedback, but not all members have submitted yet.</li>
     <li>Any of the average participation, effort, or punctuality ratings are in the middle of the scale (between <%= Feedback::BAD_RATING.round(3) %> and <%= Feedback::OKAY_RATING.round(3) %>).</li>
   </ul>
 
