Updated Troy's suggestions

--- a/app/views/users/_form_forgot_question.html.erb
+++ b/app/views/users/_form_forgot_question.html.erb
@@ -13,7 +13,7 @@
   <%= form.hidden_field :email, value: @user_email  %>
 
   <div class="actions">
-    <%= form.submit "Submit" , email: @user.first.email %>
+    <%= form.submit "Submit" %>
   </div>
 
 <% end %>
