--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Sign up!</h1>
+<p>Please note that leaving the security questions blank will not allow you to reset your password in the case that you forget it.</p>
 
 <%= render 'form', user: @user %>
 
