--- a/app/views/static_pages/_paginate.html.erb
+++ b/app/views/static_pages/_paginate.html.erb
@@ -3,5 +3,5 @@
 </div>
 
 <%= form_with(method: :get, local: true) do |form| %>
-  <%= form.select :per_page, options_for_select([1, 5, 10, 20, 100], model.per_page), {}, { onchange: 'this.form.submit();' } %>
+  <%= form.select :per_page, options_for_select(ApplicationHelper::PER_PAGE_OPTIONS, model.per_page), {}, { onchange: 'this.form.submit();' } %>
 <% end %>
