feat(Description): added message describing how to apply specifictions with filtering/ordering for feedbacks page

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -1,6 +1,11 @@
 <h1>Feedbacks</h1>
 
 <p>You can find a history of all feedbacks submitted below.</p>
+<p>
+  If interested in specifying the number of rows to display in conjunction with filtering/sorting,
+  please specify the rows first and then filter/sort the rows after (filtering/sorting first, and 
+  then specifying the number of rows will just reset the applied filtering/sorting).
+</p>
 
 <%= render 'filter', path: feedbacks_path %>
 
