--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Email:</strong>
   <%= @user.email %>
@@ -28,4 +26,4 @@
   <% end %>
 </p>
 
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', :back %> | <%= link_to 'Edit', edit_user_path(@user) %>
