feat(Transaction): added error handling and transactions in case one record is invalid

--- a/app/views/user_verifications/index.html.erb
+++ b/app/views/user_verifications/index.html.erb
@@ -1,7 +1,7 @@
 <h1>User Verifications</h1>
 
 <%= form_tag import_user_verifications_path, multipart: true do %>
-  <%= file_field_tag :file %>
+  <%= file_field_tag :file, required: true %>
   <%= submit_tag "Import CSV" %>
 <% end %>
 
