feat(Verification): added condition to confirm user is signing up for correct team with correct email

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,8 @@
     </div>
 
     <% if user.errors.full_messages.include?("Teams code cannot be blank") || %>
-      <% user.errors.full_messages.include?("Teams code does not exist") %>
+      <% user.errors.full_messages.include?("Teams code does not exist") || %>
+      <% user.errors.full_messages.include?("Teams code incorrect for provided email") %>
       <% is_team_code_invalid = true %>
     <% end %>
   <% end %>
