refactor(Description): updated message as per comments

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -2,9 +2,9 @@
 
 <p>You can find a history of all feedbacks submitted below.</p>
 <p>
-  If interested in specifying the number of rows to display in conjunction with filtering/sorting,
-  please specify the rows first and then filter/sort the rows after (filtering/sorting first, and 
-  then specifying the number of rows will just reset the applied filtering/sorting).
+  If you would like to view a specific number of feedbacks per page, please specify the number of 
+  rows to display using the dropdown at the bottom of the page <b>before</b> applying the desired 
+  filtering/sorting.
 </p>
 
 <%= render 'filter', path: feedbacks_path %>
