--- a/app/views/user_verifications/index.html.erb
+++ b/app/views/user_verifications/index.html.erb
@@ -1,9 +1,14 @@
 <h1>User Verifications</h1>
 
+<p>
+  Upload a CSV file formatted with headers of <b>"team,email"</b> along with the subsequent rows
+  stating which <b>Email</b> should be on what <b>Team</b>.
+</p>
 <%= form_tag user_verifications_import_path, multipart: true do %>
   <%= file_field_tag :file, required: true %>
   <%= submit_tag "Import CSV" %>
 <% end %>
+</br>
 
 <% if @user_verifications.size == 0 %>
   <p>No user verifications yet!</p>
