fix(Pagination Specifications): added condition such that pagination specifications will not be displayed if there is no data

--- a/app/views/static_pages/_paginate.html.erb
+++ b/app/views/static_pages/_paginate.html.erb
@@ -2,7 +2,9 @@
   <%= will_paginate model %>
 </div>
 
-<%= form_with(method: :get, local: true) do |form| %>
-  <%= form.select :per_page, options_for_select(ApplicationHelper::PER_PAGE_OPTIONS, model.per_page) %>
-  <%= form.submit %>
+<% if !model.empty? %>
+  <%= form_with(method: :get, local: true) do |form| %>
+    <%= form.select :per_page, options_for_select(ApplicationHelper::PER_PAGE_OPTIONS, model.per_page) %>
+    <%= form.submit %>
+  <% end %>
 <% end %>
