refactor(team): changed reference of 'team' in CSV to more descriptive 'team_code'

--- a/app/views/user_verifications/index.html.erb
+++ b/app/views/user_verifications/index.html.erb
@@ -1,7 +1,7 @@
 <h1>User Verifications</h1>
 
 <p>
-  Upload a CSV file formatted with headers of <b>"team,email"</b> along with the subsequent rows
+  Upload a CSV file formatted with headers of <b>"team_code,email"</b> along with the subsequent rows
   stating which <b>Email</b> should be on what <b>Team</b>.
 </p>
 <%= form_tag user_verifications_import_path, multipart: true do %>
