--- a/app/views/users/temp_password.html.erb
+++ b/app/views/users/temp_password.html.erb
@@ -1,3 +1,3 @@
-<h1>Temp password for <%= @user.full_name.titleize %>: </h1>
+<h1>Temp password for <%= @user.full_name %>: </h1>
 
 <%= render 'form_temp_pass', user: @user, code: User.generate_temp_pass %>
