Updated test and message on temp password page

--- a/app/views/users/temp_password.html.erb
+++ b/app/views/users/temp_password.html.erb
@@ -1,3 +1,3 @@
 <h1>Temp password for <%= @user.full_name %>: </h1>
-
+<p>Please copy this temporary password before submitting the form, as you will not have access to the password after submitting.</p>
 <%= render 'form_temp_pass', user: @user, code: User.generate_temp_pass %>
