test(System Tests): added system tests to cover CSV upload, signing up as new user, and help page instructions

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -78,7 +78,7 @@
       <b>"team_code"</b> and <b>"email"</b>, with all subsequent rows listing the data.
     </p>
     <div style="text-align: center;">
-      <%= image_tag "user_verification_upload_format.png", :style => "border: 1px solid black;" %>
+      <%= image_tag "user_verification_upload_format.png", :id => "user_verification_upload_format", :style => "border: 1px solid black;" %>
     </div>
     <p>
       If an incorrect user verification is assigned in the CSV file and uploaded, to correct this mistake just
