--- a/app/views/user_verifications/index.html.erb
+++ b/app/views/user_verifications/index.html.erb
@@ -2,8 +2,8 @@
 
 <p>
   If necessary, please head to the
-  <b><%= link_to "Help", help_path(:anchor => "user_verification_help") %></b>
-  page for detailed instructions on the CSV file format.
+  <b><%= link_to "Help Page", help_path(:anchor => "user_verification_help") %></b>
+  for detailed instructions on the CSV file format.
 </p>
 <%= form_tag user_verifications_import_path, multipart: true do %>
   <%= file_field_tag :file, required: true %>
