fix(Comments): made changes according to comments left on PR

--- a/app/views/user_verifications/index.html.erb
+++ b/app/views/user_verifications/index.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 </br>
 
-<% if @user_verifications.size == 0 %>
+<% if @user_verifications.empty? %>
   <p>No user verifications yet!</p>
 <% else %>
   <table>
